--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Nikolay Sokolovskiy",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "animate.css": "^4.1.1",
     "browser-sync": "^2.26.12",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -17,8 +19,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
-    "magnific-popup": "^1.1.0",
+    "jquery.maskedinput": "^1.4.1",
     "normalize.css": "^8.0.1",
-    "slick-carousel": "^1.8.1"
+    "wow.js": "^1.2.2"
   }
 }
