--- a/app/.htaccess
+++ b/app/.htaccess
@@ -7,11 +7,8 @@ RewriteCond %{REQUEST_URI} !\.
 RewriteCond %{REQUEST_URI} ![^\/]$
 RewriteRule ^(.*)\/$ /$1 [R=301,L]
 
-RewriteCond %{HTTPS} !on
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
-
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www\.(.*)$
+RewriteRule ^(.*)$ http://%1/$1 [L,R=301] 
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^.]+)$ $1.html [NC,L]
